reactium_modules/@atomic-reactor/toolkit/Toolbar/_style.scss
.rtk-toolbar {
    display: flex;
    align-items: center;
    position: sticky;
    top: 0;
    right: 0;
    width: 100%;
    height: $rtk-toolbar-height;
    z-index: $rtk-toolbar-z;
    background-color: $rtk-toolbar-bg-color;
    border-bottom: 1px solid $rtk-toolbar-border-color;

    &-title {
        font-size: 14px;

        @include rtk-breakpoint(lg) {
            font-size: 18px;
        }
    }

    .form-group > select {
        padding-top: 4px;
        padding-bottom: 4px;
    }

    &-left,
    &-right,
    &-center {
        display: flex;
        flex-grow: 1;
        align-items: center;

        &:empty {
            display: none;
        }
    }

    &-right {
        justify-content: flex-end;
    }

    &-center {
        flex-grow: 0;
    }
}

